Configure gradle.properties

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+RNSTARTER_STORE_FILE=RNStarter.keystore
+RNSTARTER_KEY_ALIAS=RNStarter
+RNSTARTER_STORE_PASSWORD=rnstartertest
+RNSTARTER_KEY_PASSWORD=rnstartertest
