Add release configuration in build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(RNSTARTER_STORE_FILE)
+            storePassword RNSTARTER_STORE_PASSWORD
+            keyAlias RNSTARTER_KEY_ALIAS
+            keyPassword RNSTARTER_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
@@ -165,7 +171,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
